package juliokozarewicz.tasks.adapter.rest.enums;

import juliokozarewicz.tasks.domain.exception.DomainExceptionEnum;

public enum GlobalExceptionEnum {

    // =============================================== ( rest error codes init )
    SERVICE_UNAVAILABLE(503, "SERVICE_UNAVAILABLE", null),
    INTERNAL_SERVER_ERROR(500, "INTERNAL_SERVER_ERROR", null),
    TOO_MANY_REQUESTS(429, "TOO_MANY_REQUESTS", null),
    UNPROCESSABLE_ENTITY(422, "UNPROCESSABLE_ENTITY", null),
    NO_PERMISSION_TO_ACCESS(403, "NO_PERMISSION_TO_ACCESS", DomainExceptionEnum.NO_PERMISSION_TO_ACCESS),
    PAYMENT_REQUIRED(402, "PAYMENT_REQUIRED", DomainExceptionEnum.PAYMENT_REQUIRED),
    ACCESS_EXPIRED(401, "ACCESS_EXPIRED", null),
    INVALID_CREDENTIALS(401, "INVALID_CREDENTIALS", DomainExceptionEnum.INVALID_CREDENTIALS),
    BAD_REQUEST(400, "BAD_REQUEST", null),
    // ================================================ ( rest error codes end )

    // ============================================= ( domain error codes init )

    // tasks
    TASKS_INVALID_PRIORITY(400, "TASKS_INVALID_PRIORITY", DomainExceptionEnum.TASKS_INVALID_PRIORITY),
    TASKS_USER_NOT_FOUND(404, "TASKS_USER_NOT_FOUND", DomainExceptionEnum.TASKS_USER_NOT_FOUND),
    TASKS_INVALID_DATE(400, "TASKS_INVALID_DATE", DomainExceptionEnum.TASKS_INVALID_DATE),
    TASKS_INVALID_DATE_RANGE(400, "TASKS_INVALID_DATE_RANGE", DomainExceptionEnum.TASKS_INVALID_DATE_RANGE),
    TASKS_INVALID_ALLDAY(400, "TASKS_INVALID_ALLDAY", DomainExceptionEnum.TASKS_INVALID_ALLDAY),
    TASKS_INVALID_REMINDER(400, "TASKS_INVALID_REMINDER", DomainExceptionEnum.TASKS_INVALID_REMINDER),
    TASKS_DUPLICATED_TASK(409, "TASKS_DUPLICATED_TASK", DomainExceptionEnum.TASKS_DUPLICATED_TASK),
    TASKS_NOT_FOUND(404, "TASKS_NOT_FOUND", DomainExceptionEnum.TASKS_NOT_FOUND),
    TASKS_FIELD_CANNOT_BE_EMPTY(400, "TASKS_FIELD_CANNOT_BE_EMPTY", DomainExceptionEnum.TASKS_FIELD_CANNOT_BE_EMPTY),
    TASKS_TOO_MANY_CHARACTERS(400, "TASKS_TOO_MANY_CHARACTERS", DomainExceptionEnum.TASKS_TOO_MANY_CHARACTERS),
    TASKS_FORBIDDEN_CHARACTERS(400, "TASKS_FORBIDDEN_CHARACTERS", DomainExceptionEnum.TASKS_FORBIDDEN_CHARACTERS),

    // categories
    TASKS_DUPLICATED_CATEGORY(409, "TASKS_DUPLICATED_CATEGORY", juliokozarewicz.tasks.domain.exception.DomainExceptionEnum.TASKS_DUPLICATED_CATEGORY),
    TASKS_CATEGORY_NOT_FOUND(404, "TASKS_CATEGORY_NOT_FOUND", juliokozarewicz.tasks.domain.exception.DomainExceptionEnum.TASKS_CATEGORY_NOT_FOUND);
    // ============================================== ( domain error codes end )

    // ================================================ ( dto error codes init )
    public static final String TASKS_FIELD_CANNOT_BE_EMPTY_DTO = "TASKS_FIELD_CANNOT_BE_EMPTY_DTO";
    public static final String TASKS_TOO_MANY_CHARACTERS_DTO = "TASKS_TOO_MANY_CHARACTERS_DTO";
    public static final String TASKS_INVALID_PRIORITY_DTO = "TASKS_INVALID_PRIORITY";
    public static final String TASKS_TOO_FEW_CHARACTERS_DTO = "TASKS_TOO_FEW_CHARACTERS_DTO";
    public static final String TASKS_FORBIDDEN_CHARACTERS_DTO = "TASKS_FORBIDDEN_CHARACTERS_DTO";
    public static final String TASKS_INVALID_ID_DTO = "TASKS_INVALID_ID_DTO";
    // ================================================= ( dto error codes end )

    public final int statusCode;
    public final String messageCode;
    public final DomainExceptionEnum domainError;

    GlobalExceptionEnum(
        int statusCode,
        String messageCode,
        DomainExceptionEnum domainError
    ) {
        this.statusCode = statusCode;
        this.messageCode = messageCode;
        this.domainError = domainError;
    }

    public static GlobalExceptionEnum fromDomainError(DomainExceptionEnum domainError) {
        for (GlobalExceptionEnum e : values()) {
            if (e.domainError == domainError) return e;
        }
        return INTERNAL_SERVER_ERROR;
    }

}